src/test/resources/lox/error/result_ok0.lox
print Ok("Hello").orFail(); // expect: Hello
